src/components/IncidentsMenu/IncidentsMenu.css
.incidents-menu {
  display: flex;
  justify-content: space-around;
}



@media only screen and (max-width: 768px) {
  .incidents-menu {
    flex-direction: column;
    width: 98%;
  }

  .incidents-container {
    width: 95%;
    margin: 0 auto;
  }
}

@media only screen and (max-width: 1050px) {
  .incidents-menu {
    flex-direction: column;
    width: 98%;
    margin: 0 auto;
  }

  .incidents-container {
    width: 95%;
    margin: 0 auto;
  }
}

